objects/QIDC__MDM_Field_Mapping_ims__c.object
<CustomObject>
    <description>Defines mappings between MDM attributes and SObject fields.</description>
    <fields>
        <fullName>QIDC__Has_Record_Mapping_ims__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this mapping will determine record type mappings.</description>
        <inlineHelpText>If checked, this mapping will determine record type mappings.</inlineHelpText>
        <label>Defines Record Mapping?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QIDC__Is_Primary_Key_ims__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Primary Key for the object mapping. Only one field can be Primary Key for a given mapping.</description>
        <inlineHelpText>The Primary Key for the object mapping. Only one field can be Primary Key for a given mapping.</inlineHelpText>
        <label>Is Primary Key?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QIDC__Object_Mapping_ims__c</fullName>
        <description>The MDM entity that the fields being mapped belong to.</description>
        <inlineHelpText>The MDM entity that the fields being mapped belong to.</inlineHelpText>
        <label>Object Mapping</label>
        <referenceTo>QIDC__MDM_Object_Mapping_ims__c</referenceTo>
        <relationshipLabel>MDM Field Mappings</relationshipLabel>
        <relationshipName>Field_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QIDC__SObject_Field_ims__c</fullName>
        <description>Target Salesforce field that is mapped to the attribute.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Target Salesforce field that is mapped to the attribute.</inlineHelpText>
        <label>SObject Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__URI_ims__c</fullName>
        <description>Path that is used to reach the attribute configuration.
Format: configuration/{objectType}/attributes/{AttributeName}</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Path that is used to reach the attribute configuration.
Format: configuration/{objectType}/attributes/{AttributeName}</inlineHelpText>
        <label>URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MDM Field Mapping</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDM Field Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>